# wbr_mujoco

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh-CN.md
bridge/: README.md  README.zh-CN.md
bridge/include/bridge/: app_control.hpp  control_cycle.hpp  input_shm.hpp  io_transport.hpp  mj_adapter.hpp  msg_convert.hpp  msg_transport.hpp  robot_io.hpp  ros2_control_adapter.hpp  shm_bridge.hpp  shm_transport.hpp  sim_config.hpp
bridge/src/: app_control.cpp  control_cycle.cpp  msg_transport.cpp  shm_bridge.cpp  shm_transport.cpp  sim_config.cpp
common/: README.md  README.zh-CN.md
common/include/msg/: msg.hpp  status.hpp
common/include/robot_ipc/: channel.hpp  input_shm.hpp
common/include/robot_msgs/: types.hpp
common/src/: msg.cpp
config/robots/: wbr.yaml
controller/include/control/: balance.hpp  chassis_fsm.hpp  config.hpp  imu_fusion.hpp  leg.hpp  lqr_coeffs.hpp  math.hpp  msgs.hpp
controller/include/controller/: app.hpp  config.hpp  ecal_io.hpp  services.hpp
controller/src/: app.cpp  config.cpp  ecal_io.cpp  main.cpp  services.cpp
ctrl/: README.md  README.zh-CN.md
ctrl/src/: main.cpp
mjcf/: mjmodel.xml  scene.xml
mjcf/meshes/: llink1.STL  llink1_child1.STL  llink4.STL  llink4_child1.STL  llink4_child2.STL  llink4_child3.STL  llink4site2.STL  lwlink.STL  rlink1.STL  rlink1_child1.STL  rlink4.STL  rlink4_child1.STL  rlink4_child2.STL  rlink4_child3.STL  rwlink.STL
scripts/: fix_stl_for_mujoco.py
sim/: main.cc
tests/: test_adapter.cpp  test_import.cpp  test_shm.cpp
tools/lqr/: README.md  amatrix.py  bmatrix.py  dynamics.py  fit_lqr.py  gen_matrices.py  leg_data.py
wbr_mujoco/include/wbr/: null_controller.hpp
wbr_mujoco/src/: main.cc
